objects/ssot__SalesTransactionFulfillmentRequest__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AssetizationStatus__c</fullName>
        <label>Assetization Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DecompositionStatus__c</fullName>
        <label>Decomposition Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FulfillmentPlanId__c</fullName>
        <label>Fulfillment Plan</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Sales Transaction Fulfillment Request Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OrchestrationStatus__c</fullName>
        <label>Orchestration Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RoutingStatus__c</fullName>
        <label>Routing Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SalesTransactionReferenceId__c</fullName>
        <label>Sales Transaction Reference Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SalesTransactionReferenceObject__c</fullName>
        <label>Sales Transaction Reference Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SalesTransactionType__c</fullName>
        <label>Sales Transaction Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Status__c</fullName>
        <label>Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720291850595_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SalesTransactionFulfillmentRequest_F_rel</label>
        <referenceTo>ssot__FulfillmentPlan__dlm</referenceTo>
        <relationshipLabel>SalesTransactionFulfillmentRequest_F_rel</relationshipLabel>
        <relationshipName>rel_1720291850595_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720291852992_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SalesTransactionFulfillmentRequest_S_rel</label>
        <referenceTo>ssot__SalesOrderProduct__dlm</referenceTo>
        <relationshipLabel>SalesTransactionFulfillmentRequest_S_rel</relationshipLabel>
        <relationshipName>rel_1720291852992_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720291859466_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SalesTransactionFulfillmentRequest_S_rel</label>
        <referenceTo>ssot__Quote__dlm</referenceTo>
        <relationshipLabel>SalesTransactionFulfillmentRequest_S_rel</relationshipLabel>
        <relationshipName>rel_1720291859466_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>